fix: remove margin-top from tabs
- Tabs should be directly under the title without extra spacing
- Matches Figma design spacing

--- a/src/app/admin/workspaces/[id]/WorkspaceDetailsClient.module.scss
+++ b/src/app/admin/workspaces/[id]/WorkspaceDetailsClient.module.scss
@@ -20,7 +20,6 @@
     display: flex;
     gap: 32px;
     border-bottom: 1px solid $black-light;
-    margin-top: 24px;
     margin-bottom: 32px;
   }
 
